# ota-extract

./: .editorconfig  .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
assets/: compile-proto.sh  compile-protos.sh  requirements-dev.txt  update_metadata.proto
docs/: conf.py
scripts/: compile-protos.sh
src/ota_extract/: common.py  error.py  info.py  main.py
src/update_metadata/: puffin_pb2.py  puffin_pb2.pyi  update_metadata_pb2.pyi
src/update_payload/: __init__.py  applier.py  checker.py  common.py  error.py  format_utils.py  histogram.py  payload.py
