[metadata]
name = ota-extract
version = 0.1.0pre0
author = Andrew Powers-Holmes
author_email = aholmes@omnom.net
maintainer = Andrew Powers-Holmes
maintainer_email = aholmes@omnom.net
license_files = LICENSE.md

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src
py_modules =
    ota_extract
    update_metadata
include_package_data = True
install_requires =
    click == 8.1.3
    protobuf == 4.21.1
    bsdiff4 == 1.2.2
    tqdm == 4.64.0
    colorama == 0.4.5
    brotli == 1.0.9

[options.packages.find]
where = src

[options.package_data]
    * = *.txt, *.md, assets/*

[options.extras_require]
dev =
    black >= 22.3.0
    flake8 >= 4.0.1
    mypy-protobuf == 3.2.0

[options.entry_points]
console_scripts =
    ota-extract = ota_extract.main:cli

[flake8]
max-line-length = 120
ignore =
    # rules we're ignoring for compat reasons
    F401 # warn on unused import
    E501 # line too long
    # black breaks these two rules:
    E203 # whitespace before :
    W503 # line break before binary operator
